add media queries for mobile

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="budget-wrapper">
         <div class="budget-container">
             <h1 class="budget-heading">Budgets</h1>
-            <div class="button-wrapper">
+            <div class="budget-btns">
                 <button class="add-budget">Add Budget</button>
                 <button class="add-expense">Add expense</button>
             </div>
@@ -111,10 +111,13 @@
     <div class='budget-account'>
         <table class="budget-account-table">
             <tr class='table-row'>
-                <th>S/N</th>
-                <th>Name</th>
-                <th>Description</th>
-                <th>Amount</th>
+                <th class="table-heading">S/N</th>
+                <th class="table-heading">Name</th>
+                <th class="table-heading">Description</th>
+                <th class="table-heading">Amount</th>
+                <th class="table-heading">Category</th>
+                <th class="table-heading"></th>
+                <th class="table-heading"></th>
             </tr>
         </table>
     </div>
