--- a/index.html
+++ b/index.html
@@ -19,13 +19,6 @@
                 <button class="add-expense">Add expense</button>
             </div>
         </div>
-        <div class='add-new-budget'>
-            <div class='add'>
-                <div class="plus"></div>
-                <div class="plus"></div>
-            </div>
-            <h1>No Budget Added</h1>
-        </div>
         <div class="add-budget-backdrop"></div>
         <form class="add-expense-form">
             <h1>Add Expenses</h1>
@@ -60,7 +53,15 @@
             </div>
             <button class="add-budget-btn" type="submit">Add budget</button>
         </form>
-        <div class="budgets"></div>
+        <div class="budgets">
+            <div class='add-new-budget'>
+                <div class='add'>
+                    <div class="plus"></div>
+                    <div class="plus"></div>
+                </div>
+                <h1>No Budget Added</h1>
+            </div>
+        </div>
     </div>
     <div class='expense-account'>
         <table class="expense-account-table">
